tests/Unit/PHPStan/Rules/Naming/Fixtures/TypeSuffixMismatch/Invalid/EdgeCases/DuplicateInterfaceBaseNameNotice.php
<?php

declare(strict_types=1);

namespace TypeSuffixMismatchFixtures\Invalid\EdgeCases;

use TypeSuffixMismatchFixtures\Valid\EdgeCases\DuplicateBaseName\A\ChannelInterface as AChannelInterface;
use TypeSuffixMismatchFixtures\Valid\EdgeCases\DuplicateBaseName\B\ChannelInterface as BChannelInterface;

final class DuplicateInterfaceBaseNameNotice
{
    private AChannelInterface|BChannelInterface $channel;
}
